fix change order-history id

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -81,7 +81,7 @@
                         (click)="redirectOrderHistory(notification.linkTo)"
                         class="notification-link"
                         *ngFor="let notification of notifications">
-                        <div class="notification-item">
+                        <div class="notification-item cursor-pointer">
                           <div class="d-flex justify-content-between">
                             <div style="width: 90%">
                               <div class="notification-content mb-2">
