--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -230,7 +230,7 @@
   min-width: 350px;
   width: fit-content;
   overflow: hidden;
-  padding: 10px 15px;
+  padding: 10px 5px 10px 15px;
   box-sizing: border-box;
   border-radius: 2px;
   z-index: 5;
