--- a/src/app/pages/order-return/order-return.component.html
+++ b/src/app/pages/order-return/order-return.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center pt-60 pb-60">
+<div class="container text-center" style="padding: 120px 0">
   <img
     [src]="
       params.vnp_ResponseCode === '00'
@@ -12,7 +12,7 @@
   <ng-container *ngIf="params.vnp_ResponseCode === '00'; else failure">
     <h2 class="mb-2 text-success">Thanh Toán Thành Công</h2>
     <p class="text-muted">
-      Dơn hàng của quý khách đã thanh toán thành công với số tiền.
+      Đơn hàng của quý khách đã thanh toán thành công với số tiền.
       {{ params.vnp_Amount / 100 | formatPrice }}đ
     </p>
 
