--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -275,11 +275,8 @@
                   </ul>
                 </ul>
               </li>
-              <li (click)="router.navigate(['/collections']).then()">
-                <a>Nam</a>
-              </li>
-              <li (click)="router.navigate(['/collections']).then()">
-                <a>Nữ</a>
+              <li (click)="onSearchNewest()">
+                <a>Mới nhất</a>
               </li>
               <li (click)="router.navigate(['/collections']).then()">
                 <a>Luxury</a>
