--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -47,7 +47,7 @@
                 <div class="mb-1">
                   <i class="fa-solid fa-location-dot color-blue me-1"></i>
                   <span class="fw-500"
-                    >97 Trần Đại Nghĩa, P. Bách Khoa, HBT, Hà Nội</span
+                    >97 Trần Đại Nghĩa, P. Bách Khoa, Hai Bà Trưng, Hà Nội</span
                   >
                 </div>
                 <p class="d-flex align-items-center">
