--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -98,7 +98,7 @@
             WatchStore Trần Đại Nghĩa
           </h4>
           <div class="ct_cd py-3 text-size-small m-0">
-            <p class="mb-3 fw-400">97 Trần Đại Nghĩa, HBT, Hà Nội</p>
+            <p class="mb-3 fw-400">97 Trần Đại Nghĩa, Hai Bà Trưng, Hà Nội</p>
             <a
               target="_blank"
               class="color-blue"
