--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -43,6 +43,13 @@
                       formControlName="phone" />
                   </div>
                   <div class="col-lg-12 form-group pb-4" required>
+                    <label class="form-label">Email</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      formControlName="email" />
+                  </div>
+                  <div class="col-lg-12 form-group pb-4" required>
                     <div class="position-relative">
                       <div>
                         <label class="form-label">Địa chỉ nhận hàng</label>
