--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -19,7 +19,9 @@
     class="chat-box color-white bg-primary-color position-fixed cursor-pointer">
     <div
       class="w-100 h-100 d-flex align-items-center justify-content-center chat position-relative">
-      <span class="material-symbols-outlined text-size-xl" *ngIf="!showMessageBlock">
+      <span
+        class="material-symbols-outlined text-size-xl"
+        *ngIf="!showMessageBlock">
         chat
       </span>
       <i class="fa-solid fa-xmark text-size-large" *ngIf="showMessageBlock"></i>
